src/components/Hero/Block/heroBlock.module.css
.container {
  display: flex;
  flex-direction: row;
  padding-top: 4rem;
  align-items: center;
  text-align: center;
  overflow: hidden;
  height: 16rem;
  transition: all var(--animation);
  position: relative;
  z-index: 1;
}

.noPointer {
  pointer-events: none;
}

.noPointer a,
.noPointer button {
  pointer-events: all;
}

.small {
  padding-top: 2rem;
  top: -2rem;
  z-index: 100;
  height: 12rem;
}

.small.sticky {
  position: sticky;
}

.collapse {
  height: unset;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.fade {
  animation-duration: 1s;
  animation-name: fadeIn;
  animation-fill-mode: forwards;
  opacity: 0;
}

